<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp">

        <LinearLayout
            android:background="@color/cardview_shadow_end_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:background="@color/cardview_dark_background">

                <FrameLayout
                    android:id="@+id/imageViewFrameLayout"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:background="@color/cardview_light_background"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_margin="4dp"
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/txt_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/put_your_image"
                        android:textSize="20sp" />

                </FrameLayout>

            </FrameLayout>

            <EditText
                android:text="Marioo"
                android:id="@+id/ebt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_user"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:text="01208847854"
                android:id="@+id/ebt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_user"
                android:inputType="textPhonetic"
                android:textSize="20sp" />

            <EditText
                android:text="0000000000"
                android:id="@+id/ebt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_user"
                android:inputType="textPhonetic"
                android:textSize="20sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>