<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/white"

        app:cardElevation="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:background="@color/cardview_dark_background">

                    <FrameLayout
                        android:id="@+id/imageViewFrameLayout"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:background="@color/cardview_light_background"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:id="@+id/txt_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/put_your_image"
                            android:textSize="20sp" />

                    </FrameLayout>

                </FrameLayout>

                <EditText
                    android:id="@+id/ebt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/name_worker"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ebt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/phone_user"
                    android:inputType="phone"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ebt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/password_user"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerSeletor"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:entries="@array/professions_list" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="textPhonetic"
                        android:text="@string/profession"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_button_flat_background_color_pressed_light_theme"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone">


                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </FrameLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>

</ScrollView>