<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"

        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    app:title="@string/page_workeres"
                    app:titleTextColor="@android:color/white"

                    app:contentInsetStart="16dp"
                    app:contentInsetEnd="16dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:orientation="horizontal">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                app:queryHint="@string/serach_queryhint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"

                app:iconifiedByDefault="false" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="48dp"
                android:layout_height="match_parent"

                android:layout_gravity="center_vertical"

                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                android:src="@drawable/ic_person_black_24dp" />

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--
                    Note we add margin only to 2 of 4 directions,
                    and in recyclerView make padding of other 2 direction
                    so we ensure there exactly 4dp between each item
                    else would make if rc scrolls vertically with 2 column
                    there will be more space exactly double
                    between the 2 items.
                -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:paddingRight="4dp"
                    android:paddingLeft="0dp"
                    android:paddingBottom="4dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/emptyViewTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:visibility="gone"

                    android:gravity="center"

                    android:background="@android:color/white"

                    android:text="@string/no_workers_nearby"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            </FrameLayout>

        </android.support.v4.widget.SwipeRefreshLayout>


    </LinearLayout>

</layout>