<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/detailWorker_ObservableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">


        <LinearLayout
            android:id="@+id/details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailWorker_ImageView_MovieCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#222" />

            <!--Main Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_horizontal_margin">
                    <!--Profile Pic-->
                    <ImageView
                        android:id="@+id/detailWorker_ImageView_pp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true" />

                    <!--For names-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <!--Worker Name-->
                        <TextView
                            android:id="@+id/detailWorker_TextView_WrokerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceLarge" />

                        <!--Worker pro-->

                        <TextView
                            android:id="@+id/detailWorker_TextView_profession"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_small_margin"
                            android:textAppearance="?android:textAppearanceSmall" />

                        <TextView
                            android:id="@+id/detailWorker_TextView_viewedby"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_small_margin"
                            android:textAppearance="?android:textAppearanceSmall" />

                        <RatingBar
                            android:id="@+id/detailWorker_RatingBar_WorkerRating"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_small_margin"
                            android:numStars="5" />


                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/detailWorker_TextView_DescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/description_label"
                    android:visibility="visible" />


                <TextView
                    android:id="@+id/detailWorker_TextView_WorkerDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="#222" />


                <!--Arrow -->
                <ImageView
                    android:id="@+id/DetailsActivity_ImageView_Expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_expand_more_black_24dp" />

                <!--Previous Works-->

                <TextView
                    android:id="@+id/detailWorker_TextView_Works_labeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/previos_work"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/detailWorker_RecyclerView_TrailersList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/detailWorker_TextView_SimilarWorkers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/similar_worker"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/detailWorker_RecyclerView_SimilarWorkerList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                <!--Comment System-->
                <TextView
                    android:id="@+id/detailWorker_TextView_ReviewsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/reviews"
                    android:textAllCaps="true"
                    android:textColor="#000" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/detailWorker_RecyclerView_ReviewsList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:background="@android:color/white"
                    android:nestedScrollingEnabled="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/detailWorker_EditText_Comment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/put_your_comment_here"
                        android:maxHeight="100dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_send" />

                </LinearLayout>

                <!--End-->

            </LinearLayout>
        </LinearLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <ProgressBar
        android:id="@+id/detailWorker_Progressbar_FetchedDataProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</android.support.design.widget.CoordinatorLayout>